--- a/src/components/panes/styles.less
+++ b/src/components/panes/styles.less
@@ -1,6 +1,10 @@
 @import "../../common/styles/variables.less";
 
 .Editor {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	min-height: 0;
 	height: 100%;
 }
 
@@ -116,6 +120,7 @@
 	display: flex;
 	margin: 4px 0 4px 0;
 	width: 100%;
+	height: 25px;
 }
 
 .EditorHeaderItem {
